# project-f

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  project-f.cpp
src/core/: base64.hpp
src/video-analysis/: face-detect.cpp  face.hpp
